--- a/html/angular.html
+++ b/html/angular.html
@@ -3,11 +3,11 @@
 <head>
     <title>Use of angularjs</title>
 
-    <script src="/home/manusis/database angular/database angular/lib/angular/angular.min.js" ></script>
-    <script src="/home/manusis/database angular/database angular/js/data.js"></script>
-    <link href="/home/manusis/database angular/database angular/css/data.css" rel="stylesheet" media="screen" >
-    <link href="/home/manusis/database angular/database angular/css/bootstrap.min.css" rel="stylesheet" media="screen" >
-    <link href="/home/manusis/database angular/database angular/css/bootstrap.css" rel="stylesheet" media="screen" >
+    <script src="/home/manusis/angular-database/lib/angular/angular.min.js" ></script>
+    <script src="/home/manusis/angular-database/js/data.js"></script>
+    <link href="/home/manusis/angular-database/css/data.css" rel="stylesheet" media="screen" >
+    <link href="/home/manusis/angular-database/css/bootstrap.min.css" rel="stylesheet" media="screen" >
+    <link href="/home/manusis/angular-database/css/bootstrap.css" rel="stylesheet" media="screen" >
 </head>
 <body class="body" >
   <div ng-controller="Controller">
