--- a/html/angular.html
+++ b/html/angular.html
@@ -88,7 +88,7 @@
 
         </tr>
     </table>
-<script src="/home/manusis/database angular/database angular/js/fileUpload.js"></script>
+<script src="/home/manusis/angular-database/js/fileUpload.js"></script>
   </div>
 
 </body>
